WIP on API spec improvements
Fixes a bunch of i64/i32/isize stuff
